Fixed: Word-break in comments/activity

--- a/themes/HumHub/css/theme.less
+++ b/themes/HumHub/css/theme.less
@@ -197,6 +197,18 @@ input[type=select] {
   appearance: none;
 }
 
+.text-break {
+    word-wrap: break-word;
+    overflow-wrap: break-word;
+    word-wrap: break-word;
+    -ms-word-break: break-all;
+    word-break: break-word;
+    -ms-hyphens: auto;
+    -moz-hyphens: auto;
+    -webkit-hyphens: auto;
+    hyphens: auto;  
+}
+
 //
 // Login
 // --------------------------------------------------
@@ -712,7 +724,7 @@ input[type=select] {
 }
 
 .content span {
-  word-wrap: break-word;
+  .text-break;
 }
 
 // Modules
